# Digital_Twin

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hub.yml
