[project]
name = "digital-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "gradio>=6.18.0",
    "huggingface-hub>=1.19.0",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "typing>=3.10.0.0",
]
